[gd_scene load_steps=9 format=2]

[ext_resource path="res://code/Scence.gd" type="Script" id=1]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/texture.tres" type="TileSet" id=3]
[ext_resource path="res://asset/environment/right.png" type="Texture" id=4]
[ext_resource path="res://asset/environment/left.png" type="Texture" id=5]
[ext_resource path="res://asset/environment/bg_night.png" type="Texture" id=6]
[ext_resource path="res://scene/reuseable_platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://asset/environment/texture.png" type="Texture" id=8]

[node name="Scene" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 384.0 ]
}
next_right = "res://scene/level/level_5.tscn"
next_left = "res://scene/level/level_3.tscn"

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( -80, -32 )

[node name="Terrain" type="TileMap" parent="." index="1"]

scale = Vector2( 2, 2 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 458772, 30, 0, 458773, 29, 0, 458774, 27, 0, 524308, 16, 0, 524309, 15, 0, 524311, 27, 0, 589844, 16, 0, 589845, 15, 0, 589846, 21, 0, 589848, 27, 0, 655380, 16, 0, 655381, 15, 0, 655382, 21, 0, 655383, 21, 0, 655385, 27, 0, 786430, 30, 0, 786431, 29, 0, 720896, 29, 0, 720897, 29, 0, 720898, 29, 0, 720899, 29, 0, 720900, 29, 0, 720901, 29, 0, 720902, 29, 0, 720903, 31, 0, 720907, 23, 0, 720908, 22, 0, 720909, 22, 0, 720910, 24, 0, 720916, 16, 0, 720917, 15, 0, 720918, 21, 0, 720919, 21, 0, 720920, 21, 0, 720922, 29, 0, 720923, 29, 0, 720924, 29, 0, 720925, 29, 0, 720926, 29, 0, 851967, 20, 0, 786432, 20, 0, 786433, 20, 0, 786434, 20, 0, 786435, 20, 0, 786436, 20, 0, 786437, 20, 0, 786438, 20, 0, 786439, 17, 0, 786452, 16, 0, 786453, 15, 0, 786454, 21, 0, 786455, 21, 0, 786456, 21, 0, 786457, 21, 0, 786458, 15, 0, 786459, 15, 0, 786460, 15, 0, 786461, 15, 0, 917503, 20, 0, 851968, 20, 0, 851969, 20, 0, 851970, 20, 0, 851971, 20, 0, 851972, 20, 0, 851973, 20, 0, 851974, 20, 0, 851975, 17, 0, 851987, 30, 0, 851988, 19, 0, 851989, 15, 0, 851990, 21, 0, 851991, 21, 0, 851992, 21, 0, 851993, 21, 0, 851994, 15, 0, 851995, 15, 0, 851996, 15, 0, 851997, 15, 0, 983039, 20, 0, 917504, 20, 0, 917505, 20, 0, 917506, 20, 0, 917507, 20, 0, 917508, 20, 0, 917509, 20, 0, 917510, 20, 0, 917511, 17, 0, 917523, 16, 0, 917524, 21, 0, 917525, 21, 0, 917526, 21, 0, 917527, 21, 0, 917528, 21, 0, 917529, 21, 0, 917530, 15, 0, 917531, 15, 0, 917532, 15, 0, 917533, 15, 0, 1048575, 20, 0, 983040, 20, 0, 983041, 20, 0, 983042, 20, 0, 983043, 20, 0, 983044, 20, 0, 983045, 20, 0, 983046, 20, 0, 983047, 17, 0, 983059, 16, 0, 983060, 21, 0, 983061, 21, 0, 983062, 21, 0, 983063, 21, 0, 983064, 21, 0, 983065, 21, 0, 983066, 15, 0, 983067, 15, 0, 983068, 15, 0, 983069, 15, 0, 1114111, 12, 0, 1048576, 12, 0, 1048577, 12, 0, 1048578, 12, 0, 1048579, 12, 0, 1048580, 12, 0, 1048581, 12, 0, 1048582, 12, 0, 1048583, 14, 0, 1048595, 13, 0, 1048596, 21, 0, 1048597, 21, 0, 1048598, 21, 0, 1048599, 21, 0, 1048600, 21, 0, 1048601, 21, 0, 1048602, 12, 0, 1048603, 12, 0, 1048604, 12, 0, 1048605, 12, 0 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="utils" type="Node2D" parent="." index="2"]

[node name="spawn_left" type="Position2D" parent="utils" index="0"]

position = Vector2( 32, 336 )

[node name="spawn_right" type="Position2D" parent="utils" index="1"]

position = Vector2( 896, 336 )

[node name="exit_right" type="Area2D" parent="utils" index="2"]

editor/display_folded = true
position = Vector2( 1024, 288 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="utils/exit_right" index="0"]

scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="utils/exit_right" index="1"]

position = Vector2( -1952, -736 )
build_mode = 0
polygon = PoolVector2Array( 1888, 672, 2016, 672, 2016, 800, 1888, 800 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="exit_left" type="Area2D" parent="utils" index="3"]

editor/display_folded = true
position = Vector2( -96, 288 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="utils/exit_left" index="0"]

scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="utils/exit_left" index="1"]

position = Vector2( -1952, -736 )
build_mode = 0
polygon = PoolVector2Array( 1888, 672, 2016, 672, 2016, 800, 1888, 800 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="deadzone" type="Area2D" parent="utils" index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="deadzone_collision" type="CollisionPolygon2D" parent="utils/deadzone" index="0"]

build_mode = 0
polygon = PoolVector2Array( 224, 544, 640, 544, 640, 592, 224, 592 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="3"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="background" type="Sprite" parent="ParallaxBackground" index="0"]

position = Vector2( 416, 336 )
scale = Vector2( 0.633333, 0.633333 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="MovingPlatform" parent="." index="4" instance=ExtResource( 7 )]

position = Vector2( 400, 192 )
speed = 1
longueur = Vector2( 0, 120 )

[node name="spike" type="Area2D" parent="MovingPlatform" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="spike_collision" type="CollisionPolygon2D" parent="MovingPlatform/spike" index="0"]

build_mode = 0
polygon = PoolVector2Array( -40, 12, -40, 24, 40, 24, 40, 12 )

[node name="spike01" type="Sprite" parent="MovingPlatform/spike" index="1"]

position = Vector2( -24, 28 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 432, 192, 16, 16 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[node name="spike02" type="Sprite" parent="MovingPlatform/spike" index="2"]

position = Vector2( 8, 28 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 432, 192, 16, 16 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[node name="spike03" type="Sprite" parent="MovingPlatform/spike" index="3"]

position = Vector2( 24, 28 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 432, 192, 16, 16 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[connection signal="body_entered" from="utils/exit_right" to="." method="_on_exit_right_body_entered"]

[connection signal="body_entered" from="utils/exit_left" to="." method="_on_exit_left_body_entered"]

[connection signal="body_entered" from="utils/deadzone" to="." method="_on_deadzone_body_entered"]

[connection signal="body_entered" from="MovingPlatform/spike" to="." method="_on_nham_body_entered"]


